  [Michele Simionato]
  * Removed the dependency from nose

  [Robin Gee]
  * Updated GMPE of Yu et al. (2013)

  [Michele Simionato]
  * Added an `Extractor` client class leveraging the WebAPI and enhanced
    `oq plot_hmaps` to display remote hazard maps
  * Added a check when disaggregation is attempted on a source model
    with atomic source groups
  * Implemented serialization/deserialization of GSIM instances to TOML
  * Added a check against mispelled rupture distance names and fixed
    the drouet_alpes_2015 GSIMs
  * Changed the XML syntax used to define dictionaries IMT -> GSIM
  * Now GSIM classes have an `.init()` method to manage notrivial
    initializations, i.e. expensive initializations or initializations
    requiring access to the filesystem
  * Fixed a bug in event based that made it impossible to use GMPETables
  * Associated the events to the realizations even in scenario_risk: this
    involved changing the generation of the epsilons in the case of asset
    correlation. Now there is a single aggregate losses output for all
    realizations
  * Removed the rlzi column from the GMF CSV export
  * Introduced a new parameter `ebrisk_maxweight` in the job.ini
  * For classical calculations with few sites, store information about the
    realization closest to the mean hazard curve for each site
  * Removed the max_num_sites limit on the event based calculator

  [Valerio Poggi]
  * Added an AvgSA intensity measure type and a GenericGmpeAvgSA which is
    able to use it

  [Michele Simionato]
  * Introduced the ability to launch subtasks from tasks
  * Stored rupture information in classical calculations with few sites

  [Chris Van Houtte]
  * Adding conversion from geometric mean to larger horizontal component in
    bradley_2013.py

  [Michele Simionato]
  * Fixed a bug in applyToSources for the case of multiple sources
  * Moved the prefiltering on the workers to save memory
  * Exported the aggregated loss ratios in avg losses and agg losses