@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Forced all lowercase Python files in the engine codebase
   * Removed the dependency from nose
 
   [Robin Gee]
